# Zenshell

./: .gitignore  CMakeLists.txt  README.md  config.lua  install.sh  zen  zen.c  zen.cpp
debian/: changelog  control  debhelper-build-stamp  files  postinst  prerm  rules  zenshell.substvars
plugins/: autosuggest.lua
src/: shell.cpp
